--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,41 +6,11 @@ on:
   pull_request:
     branches: ["main", "dev"]
 
-
-job: 
-  build:
-    name: mongod server
-    runs-on: ubuntu-latest
-
-    defaults:
-      run:
-        working-directory: ./quirknotes/backend
-
-    strategy:
-      matrix:
-        node-version: [20.x]
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-      - run: npm i
-      - run: mongod --dbpath=./data/db
-      - run: npm run dev
-
-
-
-
 jobs:
   build:
     name: Backend test
     runs-on: ubuntu-latest
 
-
-
     defaults:
       run:
         working-directory: ./quirknotes/backend
@@ -56,5 +26,13 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
+
+      - name: Start MongoDB
+          uses: supercharge/mongodb-github-action@1.10.0
+          with:
+            mongodb-version: ${{ matrix.mongodb-version }}
+
+      
       - run: npm i
+      - run: npm run dev &
       - run: npm test
